--- a/login-app/login-app/package.json
+++ b/login-app/login-app/package.json
@@ -11,12 +11,18 @@
   "dependencies": {
     "@next/font": "13.1.6",
     "@types/node": "18.13.0",
-    "@types/react": "18.0.27",
+    "@types/react": "18.0.28",
     "@types/react-dom": "18.0.10",
     "axios": "^1.3.2",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "4.9.5"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.21",
+    "tailwind": "^4.0.0",
+    "tailwindcss": "^3.2.6"
   }
 }
